--- a/pom.xml
+++ b/pom.xml
@@ -13,20 +13,11 @@
             <groupId>com.yeezhao.commons</groupId>
             <artifactId>yz-commons-util</artifactId>
             <version>2.1.0.2.63-SNAPSHOT</version>
-            <!--<exclusions>-->
-            <!--<exclusion>-->
-            <!--<artifactId>hbase</artifactId>-->
-            <!--<groupId>org.apache.hbase</groupId>-->
-            <!--</exclusion>-->
-            <!--<exclusion>-->
-            <!--<artifactId>hadoop-core</artifactId>-->
-            <!--<groupId>org.apache.hadoop</groupId>-->
-            <!--</exclusion>-->
-            <!--<exclusion>-->
-            <!--<artifactId>httpclient</artifactId>-->
-            <!--<groupId>org.apache.httpcomponents</groupId>-->
-            <!--</exclusion>-->
-            <!--</exclusions>-->
+        </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-core_2.11</artifactId>
+            <version>2.2.0</version>
         </dependency>
     </dependencies>
 
